Refactor to remove use of deprecated constructors.